[package]
name = "capulin"
version = "0.1.0"
authors = ["Sean McKibben <graphex@graphex.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.68"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
ht16k33 = "0.4.0"
adafruit-alphanum4 = "0.1.2"
shared-bus = "0.2.5"

[build-dependencies]
embuild = "0.30.4"
